--- a/src/asset/style.css
+++ b/src/asset/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 * {
-    padding: 0;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
 }
@@ -25,87 +25,94 @@ input, select {
     padding: 7px;
     border-radius: 5px;
     border: 1px solid black;
-    cursor: pointer;
 }
 
 textarea {
     width: 100%;
+    max-width: 1000px;
     height: 200px;
     padding: 7px;
     border-radius: 5px;
     border: 1px solid black;
-    cursor: pointer;
 }
 
-#form {
+.App {
+    width: 100%;
+    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: space-between;
-    height: 100%;
     background: #384b5c;
 }
 
 .container {
-    width: 100%;
+    width: 60%;
     height: 100vh;
-    display: flex;
-    justify-content: center;
-}
-
-.container-todo-list {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.container-form-detail {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-}
-
-.form-new-task>* {
-    margin: 0 20px 0 20px;
-}
-
-.form-new-task {
-    width: 70%;
-    margin: 30px 0 30px 30px;
+    margin: 30px 0 50px 30px;
+    padding: 0 20px 0 20px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 8px 10px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.form-detail-task>* {
-    margin: 0 20px 0 20px;
-}
-
-.form-detail-task {
+.container-todo-list {
     width: 100%;
+    height: 100%;
     margin: 30px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 8px 10px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.todo-list>* {
-    margin: 0 20px 0 20px;
-}
-
-.todo-list {
-    width: 100%;
-    margin: 30px 30px 30px 0;
+.container-form-detail {
+    margin: 30px 30px 80px 30px;
+    padding: 0 20px 0 20px;
     background: #fff;
     border-radius: 10px;
     box-shadow: 0 8px 10px 4px rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.form-new-task {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.form-detail-task {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
 .header {
     text-align: center;
-    padding: 60px;
     font-weight: 700;
     font-size: 20px;
+    padding: 30px 0;
+}
+
+.content {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.input-wrapper {
+    margin: 20px 0;
+}
+
+.input-search {
+    margin: 20px 30px;
+}
+
+.title-task {
+    border: 1px solid rgb(199, 199, 199) !important;
+}
+
+.title {
+    margin-bottom: 10px;
+    font-size: 13px;
+    font-weight: 700;
 }
 
 .detail>* {
@@ -117,20 +124,6 @@ textarea {
     justify-content: space-between;
 }
 
-.input-wrapper {
-    margin: 20px 0;
-}
-
-.title-task {
-    border: 1px solid rgb(199, 199, 199) !important;
-}
-
-.title-input {
-    margin-bottom: 10px;
-    font-size: 13px;
-    font-weight: 700;
-}
-
 .footer>* {
     width: 100%;
 }
@@ -140,15 +133,42 @@ textarea {
     margin-bottom: 20px;
 }
 
-/* style for to do list */
+/* list items */
+.task {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    border-radius: 10px;
+    padding: 10px 10px;
+    margin: 30px 30px 0 30px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background: #fff;
+    color: #000;
+}
+
 .task-done {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    border-radius: 10px;
+    padding: 10px 10px;
+    margin: 30px 30px 0 30px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     background: #95a5a6 !important;
     color: #fff !important;
 }
 
-.check-list {
+.item {
     display: flex;
     align-items: center;
+    width: 100%;
+    height: 60px;
+}
+
+.list-item {
+    height: 100%;
 }
 
 .btn-edit {
@@ -157,21 +177,6 @@ textarea {
 
 .inner {
     margin: 10px;
-}
-
-.item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 30px;
-    margin-bottom: 30px;
-    width: 100%;
-    height: 60px;
-    border-radius: 10px;
-    padding: 0 10px;
-    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background: #fff;
-    color: #000;
 }
 
 .checkbox {
